flesh out search feature

--- a/app/index.jade
+++ b/app/index.jade
@@ -74,5 +74,6 @@ html.no-js
     script(src='scripts/controllers/main.js')
     script(src='scripts/controllers/navbar.js')
     script(src='scripts/controllers/block-detail.js')
+    script(src='scripts/controllers/search-controller.js')
 
     // endbuild
