--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -101,6 +101,11 @@ ul > li {
   font-size: 12px;
 }
 
+.single-block {
+  display:inline-block;
+  margin-right:20px;
+}
+
 $label-color-0: rgb(185, 72, 72);
 $label-color-1: rgb(185, 114, 72);
 $label-color-2: rgb(185, 157, 72);
