--- a/app/views/blocks/main-block-row.jade
+++ b/app/views/blocks/main-block-row.jade
@@ -1,6 +1,6 @@
 tr
   td
-    div(style="display:inline-block;margin-right:20px;")
+    .single-block
       mixin block-label('block._id', 'visible', 'inline-block')
       i.icon-chevron-right.hidden(style="display:inline-block;")
   //- the following is just to make the table formatting look right
