add login/signup behavior

--- a/app/index.jade
+++ b/app/index.jade
@@ -71,9 +71,11 @@ html.no-js
     script(src='scripts/services/constants.js')
     script(src='scripts/services/blocks.js')
     script(src='scripts/services/search.js')
+    script(src='scripts/services/session.js')
     script(src='scripts/controllers/main.js')
     script(src='scripts/controllers/navbar.js')
     script(src='scripts/controllers/block-detail.js')
     script(src='scripts/controllers/search-controller.js')
+    script(src='scripts/controllers/signup-login.js')
 
     // endbuild
