--- a/app/views/blocks/main-block-row.jade
+++ b/app/views/blocks/main-block-row.jade
@@ -1,7 +1,7 @@
 tr
   td
     .single-block
-      mixin block-label('block._id', 'visible', 'inline-block')
+      mixin block-label('block.id', 'visible', 'inline-block')
       i.icon-chevron-right.hidden(style="display:inline-block;")
   //- the following is just to make the table formatting look right
   td: mixin block-label('"12345"', 'hidden', 'block')
