fix broken tests and build process

--- a/app/index.jade
+++ b/app/index.jade
@@ -45,7 +45,7 @@ html.no-js
     script(src='bower_components/jquery/jquery.js')
     script(src='bower_components/angular/angular.js')
     script(src='bower_components/underscore/underscore.js')
-    // build:js scripts/plugins.js
+    // build:js(app) scripts/plugins.js
     script(src='bower_components/bootstrap-sass/js/bootstrap-affix.js')
     script(src='bower_components/bootstrap-sass/js/bootstrap-alert.js')
     script(src='bower_components/bootstrap-sass/js/bootstrap-dropdown.js')
