--- a/app/views/search.jade
+++ b/app/views/search.jade
@@ -6,7 +6,11 @@ html
     span Search for {{q}}
 
   .ajax-loader(ng-hide="doneLoading")
-  table.table.table-striped.hide-while-loading(ng-show="doneLoading")
+  .alert.alert-info(ng-show="doneLoading && !results.length")
+    .icon-for-alert-info
+      i.icon-info-sign.icon-white
+    | No results found.
+  table.table.table-striped.hide-while-loading(ng-show="doneLoading && results.length")
     include blocks/main-table-header
     tbody(ng-repeat="result in results",ng-switch on="result.docType")
       tr(ng-switch-when="summary")
