--- a/app/views/blocks/main-block-row.jade
+++ b/app/views/blocks/main-block-row.jade
@@ -9,7 +9,7 @@ tr
   td
     span(bs-tooltip='block.joinedHints') {{block.shortJoinedHints}}
   td
-    input(type='text')
+    input(style='width : calc(100% - 16px);',type='text')
   td
     button.btn(style="width:100%",ng-show='block.followingCount || block.precedingCount',
     ng-class="{'btn-primary' : !block.expanded, 'disabled' : block.loadingRelated}",ng-click="expandOrCollapse(block)")
