show full hints and counts

--- a/app/views/mixins/hints-with-counts.jade
+++ b/app/views/mixins/hints-with-counts.jade
@@ -5,4 +5,4 @@ mixin hints-with-counts(propString)
         span
           | {{hintWithCount[0]}}&nbsp;
         span.label.pull-right(ng-show='hintWithCount[1] > 1')
-          | x{{hintWithCount[1]}}
+          | &times;{{hintWithCount[1]}}
