add full hints for the search page as well

--- a/app/views/search.jade
+++ b/app/views/search.jade
@@ -1,5 +1,6 @@
 html
   include mixins/block-label
+  include mixins/hints-with-counts
   body
     include blocks/navbar
   h2.section-title
@@ -20,8 +21,7 @@ html
         //- the following is just to make the table formatting look right
         td: mixin block-label('"12345"', 'hidden', 'block')
         td {{result.count}}
-        td
-          span(bs-tooltip='result.joinedHints',ng-bind-html='result.shortJoinedHints')
+        mixin hints-with-counts('result.hintsWithCounts', 'ng-bind-html')
         td
           input(style='width : calc(100% - 16px);',type='text')
         td
@@ -31,8 +31,7 @@ html
             mixin block-label('result.blockIds[0]', 'visible', 'block')
         td: mixin block-label('result.blockIds[1]', 'visible', 'block')
         td {{result.count}}
-        td
-          span(bs-tooltip='result.joinedHints',ng-bind-html='result.shortJoinedHints')
+        mixin hints-with-counts('result.hintsWithCounts', 'ng-bind-html')
         td
           input(style='width: calc(50% - 16px);',type='text')
           input(style='width: calc(50% - 16px);',type='text')
