--- a/app/views/block-detail.jade
+++ b/app/views/block-detail.jade
@@ -28,7 +28,7 @@ html
           //- the following is just to make the table formatting look right
           td: mixin block-label('"12345"', 'hidden', 'block')
           td {{block.soloCount}}
-          mixin hints-with-counts('block.hintsWithCounts')
+          mixin hints-with-counts('block.hintsWithCounts', 'ng-bind')
           td
             input(style='width : calc(100% - 16px);',type='text')
         tr(ng-show='block.expanded',ng-repeat='relatedBlock in block.relatedBlocks')
@@ -39,7 +39,7 @@ html
           td
             mixin block-label('relatedBlock.ids[1]', 'visible', 'block')
           td {{relatedBlock.count}}
-          mixin hints-with-counts('relatedBlock.hintsWithCounts')
+          mixin hints-with-counts('relatedBlock.hintsWithCounts', 'ng-bind')
           td
             div
               input(style='width: calc(50% - 16px);',type='text')
