--- a/app/views/mixins/hints-with-counts.jade
+++ b/app/views/mixins/hints-with-counts.jade
@@ -1,8 +1,7 @@
-mixin hints-with-counts(propString)
+mixin hints-with-counts(propString, bindString)
   td.hints-with-counts
     ul
       li(ng-repeat='hintWithCount in #{propString}')
-        span
-          | {{hintWithCount[0]}}&nbsp;
+        span(#{bindString}="hintWithCount[0]")
         span.label.pull-right(ng-show='hintWithCount[1] > 1')
           | &times;{{hintWithCount[1]}}
