add basic pouchdb replication of user guesses, plus improve paging in the search controller

--- a/app/index.jade
+++ b/app/index.jade
@@ -45,6 +45,7 @@ html.no-js
     script(src='bower_components/jquery/jquery.js')
     script(src='bower_components/angular/angular.js')
     script(src='bower_components/underscore/underscore.js')
+
     // build:js(app) scripts/plugins.js
     script(src='bower_components/bootstrap-sass/js/bootstrap-affix.js')
     script(src='bower_components/bootstrap-sass/js/bootstrap-alert.js')
@@ -59,6 +60,7 @@ html.no-js
     script(src='bower_components/bootstrap-sass/js/bootstrap-scrollspy.js')
     script(src='bower_components/bootstrap-sass/js/bootstrap-collapse.js')
     script(src='bower_components/bootstrap-sass/js/bootstrap-tab.js')
+    script(src='bower_components/pouchdb-nightly.min.js/index.js')
     // endbuild
     // build:js(app) scripts/modules.js
     script(src='bower_components/angular-resource/angular-resource.js')
@@ -72,6 +74,7 @@ html.no-js
     script(src='scripts/services/blocks.js')
     script(src='scripts/services/search.js')
     script(src='scripts/services/session.js')
+    script(src='scripts/services/pouch.js')
     script(src='scripts/controllers/main.js')
     script(src='scripts/controllers/navbar.js')
     script(src='scripts/controllers/block-detail.js')
