fix links in faq

--- a/app/views/faq.jade
+++ b/app/views/faq.jade
@@ -69,11 +69,11 @@ html
             h4 So what can users do to improve their password security?
             p
               | First off, passwords like&nbsp;
-              a(href='http://localhost:9000/#/block/23463') matthew
+              a(href='#/block/23463') matthew
               | ,&nbsp;
-              a(href='http://localhost:9000/#/block/131435') adobe69
+              a(href='#/block/131435') adobe69
               | , and even&nbsp;
-              a(href='http://localhost:9000/#/block/100313') keroppi&nbsp;
+              a(href='#/block/100313') keroppi&nbsp;
               | just aren't cutting it, folks.  Our fragile human memory is limited, though, so we need a better system.
             p
               | I wrote&nbsp;
