fix the way I number things in the database, fix display of related blocks on the main page

--- a/app/views/about.jade
+++ b/app/views/about.jade
@@ -17,11 +17,13 @@ html
             p
               | I am not endorsed by Adobe or Randall Munroe.
               | But I would be flattered if either one sent me
-              | email/hatemail/lovemail/a C&amp;D/a UPS box full of brownies.
+              | email/hatemail/lovemail/a UPS box full of brownies.
             p
               | Made with lots of love, and help from:
             ul
+              li: a(href='http://www.angularjs.org/') AngularJS
               li: a(href='https://couchdb.apache.org/') CouchDB
               li: a(href='http://pouchdb.com/') PouchDB
-              li: a(href='http://www.angularjs.org/') AngularJS
+              li: a(href='https://lucene.apache.org/solr/') Solr
               li: a(href='http://yeoman.io/') Yeoman
+
