--- a/app/views/blocks/related-block-rows.jade
+++ b/app/views/blocks/related-block-rows.jade
@@ -1,4 +1,4 @@
-tr(ng-show='block.expanded',ng-repeat='relatedBlock in block.relatedBlocks')
+tr.darker-gray(ng-show='block.expanded',ng-repeat='relatedBlock in block.relatedBlocks')
   td
     div(style="display:inline-block;")
       i.icon-chevron-right(style="display:inline-block;",ng-class="{hidden : !$first}")
@@ -13,7 +13,7 @@ tr(ng-show='block.expanded',ng-repeat='relatedBlock in block.relatedBlocks')
       input(style='width: calc(50% - 16px);',type='text',ng-model='pouch.doc.guesses[relatedBlock.ids[0]]')
       input(style='width: calc(50% - 16px);',type='text',ng-model='pouch.doc.guesses[relatedBlock.ids[1]]')
   td
-tr(ng-show='block.expanded && block.moreRelatedBlocks > 0')
+tr.darker-gray(ng-show='block.expanded && block.moreRelatedBlocks > 0')
   td
   td
   td
